--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1016,12 +1016,15 @@ main .section.cream-bg.table-container.accordion-container{
     padding: 60px 80px 80px; /* Different padding */
   }
 
-  main .section.colored-text.warm-grey-bg:has(.icons-grid) p {
-    width: 100%;
-  }
-
   main .section.colored-text.warm-grey-bg:has(.icons-grid) .default-content-wrapper > p {
     padding: 10px 0 65px;
+    margin-left: -160px;
+    margin-right: 0;
+    max-width: 1600px;
+  }
+
+  main .section.colored-text.warm-grey-bg:has(.icons-grid) .columns-wrapper div > div > p {
+    width: 100%;
   }
 }
 
